dnl Process this file with autoconf to produce a configure script.

AC_INIT(cstream.c)
AC_CONFIG_AUX_DIR(auxdir)

AM_INIT_AUTOMAKE(cstream, 2.7.5)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(ossaudio, _oss_ioctl)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h poll.h machine/soundcard.h linux/soundcard.h sys/soundcard.h sys/uio.h sys/socket.h netinet/in.h arpa/inet.h netdb.h winsock2.h sys/statvfs.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_TRY_COMPILE([#include <sys/types.h>]
[#include <sys/socket.h>], socklen_t len,
  cat >> confdefs.h <<\EOF
#define HAVE_SOCKLEN_T 1
EOF
)

AC_TRY_COMPILE([#include <sys/types.h>]
[#include <signal.h>], struct sigaction sa,
  cat >> confdefs.h <<\EOF
#define HAVE_STRUCT_SIGACTION 1
EOF
)

AC_TRY_COMPILE([#include <sys/types.h>]
[#include <sys/time.h>], struct itimerval itv,
  cat >> confdefs.h <<\EOF
#define HAVE_STRUCT_ITIMERVAL 1
EOF
)

AC_ARG_ENABLE(notcp, --enable-notcp      leave out TCP/IP socket support,
  cat >> confdefs.h <<\EOF
#define NOTCP 1
EOF
)

AC_ARG_ENABLE(nosound, --enable-nosound    leave out sound support,
  cat >> confdefs.h <<\EOF
#define NOSOUND 1
EOF
)

AC_ARG_ENABLE(noresolv, --enable-noresolv   leave out resolver support,
  cat >> confdefs.h <<\EOF
#define NORESOLV 1
EOF
)

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday mkfifo strdup getnameinfo)

AC_OUTPUT(tests/Makefile auxdir/Makefile Makefile)
